--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "nodemailer": "^7.0.3",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "pg": "^8.15.6"
+    "pg": "^8.15.6",
+    "resend": "^6.1.2"
   },
   "description": ""
 }
